2004-07-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b5

	* Change: edit_appearance needs to properly handle the empty variable
	  without issuing any PHP notices/warnings
	  (Thanks for finding the issue, Tim)

2004-07-31  Jens A. Tkotz <jens@peino.de>  1.4.4-pl1-cvs-b4

	* Fix: Disabling ALL print services in edit_appearance (album properties) did not work.

2004-07-31  Jens A. Tkotz <jens@peino.de>  1.4.4-pl1-cvs-b3

	* Fix: Removed shorttags in classes/phpbb files

2004-07-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b2

	* Fix: The admin options on root albums were displaying inside the
	  Mambo UI.

2004-07-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b1

        * Fix: view_comments would display albums without read permissions
          (user could not see anything except highlight image and album title)

2004-07-29  Chris Kelly <ckdake@users.sf.net> 1.4.4

	* 1.4.4 Release

2004-07-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b8

	* Fix: Typo in register.php prevented user registration

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b7

	* Fix: Prevent the random block from grabbing an album highlight as its
	  image.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b6

	* Fix: Mambo popups failed to operate because the option var wasn't
	  set on systems with register_globals disabled - how did this
	  ever work?

	* Fix: Eliminate two shutterfly/print_photos notices in edit_appearance

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b5

	* Fix: We believe that this should fix the issue that some users have
	  had with extremely large Gallery installations during the upgrade
	  script, where the albums just don't show up on the page at all.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b4

	* Fix: Display the 'view comments in nested album' links for all users