@@ -1,3 +1,10 @@
+2004-08-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b6
+
+	* Fix: Don't display clickable dimensions for movies
+
+	* Fix: Stack the custom fields on top of each other - users were
+	  really displeased by the side-by-side view
+
 2004-07-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b5
 
 	* Change: edit_appearance needs to properly handle the empty variable
